<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chandan.getit.PrincipalActivity">

    <Button
        android:id="@+id/People"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/people"
        android:contentDescription="@string/People"
        android:text="@string/addpeople"
        android:layout_marginBottom="66dp"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:layout_above="@+id/settings"
        android:layout_toLeftOf="@+id/Notifiy"
        android:layout_toStartOf="@+id/Notifiy" />

    <Button
        android:id="@+id/Notifiy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/createnote"
        android:text="@string/createnote"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/People"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/settings"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/settings"
        android:text="@string/settings"
        android:layout_marginBottom="76dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
